cluster/apps/forwards/gitea/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: forwards
spec:
  ports:
  - name: gitea
    port: 80
    protocol: TCP
    targetPort: 30001
  type: ClusterIP
