cluster/apps/forwards/gitea/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    hajimari.io/enable: "true"
    hajimari.io/icon: git
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    kubernetes.io/ingress.class: traefik
  name: gitea
  namespace: forwards
spec:
  rules:
  - host: "gitea.${SECRET_DOMAIN}"
    http:
      paths:
      - backend:
          service:
            name: cv
            port:
              number: 80
        path: /cv
        pathType: Prefix
  tls:
  - hosts:
    - "gitea.${SECRET_DOMAIN}"
    secretName: "gitea-tls"
